# rdc-toolbox-docs

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yaml  page.html
documents/: espd.cls  preamble.tex
documents/explanatory_note/src/: аббревиатуры.tex  аннотация.tex
documents/operator_manual/: CMakeLists.txt
documents/operator_manual/src/: аббревиатуры.tex  аннотация.tex  выполнение_программы.tex  назначение.tex  сообщения_оператору.tex  условия_выполнения.tex
documents/program_description/: CMakeLists.txt  program_description.tex
documents/program_description/src/: аббревиатуры.tex  аннотация.tex  входные_и_выходные_данные.tex  вызов_и_загрузка.tex  используемые_технические_средства.tex  общие_сведения.tex  описание_логической_структуры.tex  функциональное_назначение.tex
documents/program_sources/: CMakeLists.txt  bibliography.bib  program_sources.fdb_latexmk  program_sources.fls  program_sources.tex  program_sources_lu.tex
documents/program_sources/src/: аннотация.tex
documents/program_sources/src/code/: dsp_rfft_windowed.cpp.tex  dsp_rfft_windowed.h.tex  dsp_setup.cpp.tex  dsp_setup.h.tex  sensor_self_diagnostic.cpp.tex  sensor_self_diagnostic.h.tex
documents/program_sources/src/code/calibration/: sensor_calibration.py.tex  tool_calibration.py.tex
documents/program_sources/src/code/execution/: exec_trajectory.py.tex
documents/program_sources/src/code/generation/: gen_trajectory_fourier.py.tex  gen_trajectory_friction.py.tex
documents/program_sources/src/code/identification/: friction.py.tex  full.py.tex
documents/program_sources/src/code/mcu-libs/: Matrix.cpp.tex  Matrix.h.tex  RLS.cpp.tex  RLS.h.tex
documents/program_sources/src/code/verification/: fs_verification.py.tex  torques_verification.py.tex
documents/specification/: CMakeLists.txt  specification.tex
documents/sysadmin_manual/: CMakeLists.txt
documents/sysadmin_manual/src/: аббревиатуры.tex  аннотация.tex  дополнительные_возможности.tex  настройка_программы.tex  общие_сведения.tex  проверка_программы.tex  сообщения_системному_программисту.tex  структура_программы.tex
documents/testing_methodics/: CMakeLists.txt  testing_methodics.tex
documents/testing_methodics/src/: аббревиатуры.tex  аннотация.tex  место_проведения_испытаний.tex  методы_испытаний.tex  объект_испытаний.tex  состав_и_порядок_испытаний.tex  требования_к_программе.tex  цель_испытаний.tex
