CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(program_documentation)

# Поддиректории с соответствующими документами:

# add_subdirectory(documents/example)

# add_subdirectory(documents/technical_task) # Не для сдачи в нормоконтроль

add_subdirectory(documents/specification)
add_subdirectory(documents/program_description)
add_subdirectory(documents/program_sources)
add_subdirectory(documents/sysadmin_manual)
